--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
+:root{
+    --primary-color:#E48DA1;
+}
 body{
     font-family: 'Noto Sans JP',
     sans-serif;
 }
+hr{
+    margin: 1rem 0rem;
+}
+.container{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.container-centre{
+  max-width: 600px;
+  margin: auto;
+}
+.link{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+.link-primary{
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+}
+ .link-secondary{
+     color: var(--primary-color);
+     border-radius: 0.5rem;
+     border: 1px solid var(--primary-color);
+ }
