--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,10 @@ hr{
      border-radius: 0.5rem;
      border: 1px solid var(--primary-color);
  }
+ .list-no-bullet{
+     list-style: none;
+ }
+ .list-item-inline{
+display: inline;
+padding: 0rem 0.5rem;
+ }
