--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
-:root{
-    --primary-color:#E48DA1;
+
+:root {
+    --primary-color: #E48DA1;
+    --grey-color: #9CA3AF;
 }
-body{
+
+body {
     font-family: 'Noto Sans JP',
-    sans-serif;
+        sans-serif;
 }
-hr{
+
+hr {
     margin: 1rem 0rem;
 }
-.container{
+
+.container {
     padding-left: 1rem;
     padding-right: 1rem;
 }
-.container-centre{
-  max-width: 600px;
-  margin: auto;
+
+.container-centre {
+    max-width: 600px;
+    margin: auto;
 }
-.link{
+
+.link {
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
-.link-primary{
+
+.link-primary {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color: white;
 }
- .link-secondary{
-     color: var(--primary-color);
-     border-radius: 0.5rem;
-     border: 1px solid var(--primary-color);
- }
- .list-no-bullet{
-     list-style: none;
- }
- .list-item-inline{
-display: inline;
-padding: 0rem 0.5rem;
- }
- .navigation{
-     background-color: var(--primary-color);
-     color: white;
-     padding: 1rem;
-     border-bottom-left-radius: 1rem;
- }
- .navigation .nav-brand{
-     font-weight: bold;
- }
- .navigation li{
-     color: white;
- }
- .navigation .nav-pills{
-     text-align: right;
- }
- .navigation .link-active{
-     font-weight: bolder;
- }
- .hero{
-     padding: 2rem;
-     text-align: center;
- }
- .hero .hero-img{
-     max-width: 350px;
-     display: block;
-     margin: auto;
- }
- .hero .hero-head{
-     font-size: 2rem;
-     color: darkmagenta;
- }
- .hero .hero-head .head-inverted{
-     color: var(--primary-color);
- }
+
+.link-secondary {
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primary-color);
+}
+
+.list-no-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.navigation .nav-brand {
+    font-weight: bold;
+}
+
+.navigation li {
+    color: white;
+}
+
+.navigation .nav-pills {
+    text-align: right;
+}
+
+.navigation .link-active {
+    font-weight: bolder;
+}
+
+.hero {
+    padding: 2rem;
+    text-align: center;
+}
+
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-head {
+    font-size: 2rem;
+    color: darkmagenta;
+}
+
+.hero .hero-head .head-inverted {
+    color: var(--primary-color);
+}
+
+.section h2 {
+    text-align: center;
+    padding: 2rem;
+}
+.ow{
+    background-color: var(--grey-color);
+}
